--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,9 @@ user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
-/vendor/
+vendor/*
 
-bakul/vendor/*
-
-uploads/*
+*/uploads/*
 
 site-settings.json
 
